--- a/kokua-web/style.css
+++ b/kokua-web/style.css
@@ -114,6 +114,8 @@ p{
 body {font-size:15px;
 font-family: 'Arvo';}
 
+p1 {font-size:25px;
+font-family: 'Arvo';}
 
 .button {
     background-color: #4CAF50;
