--- a/kokua-web/style.css
+++ b/kokua-web/style.css
@@ -127,4 +127,20 @@ font-family: 'Arvo';}
     cursor: pointer;
 }
 
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+li a.active {
+    background-color: #35B0E0;
+    color: white;
+}
+
+li a:hover:not(.active) {
+    background-color: white;
+    color: #35B0E0;
+}
 
