--- a/kokua-web/kokua-web/style.css
+++ b/kokua-web/kokua-web/style.css
@@ -135,3 +135,39 @@ font-size:20;}
     cursor: pointer;
 }
 
+<.tooltipicon{
+position: fixed;
+top: 5px;
+right: 5px;
+}
+
+/* Tooltip container */
+.tooltip {
+position: fixed;
+top: 5px;
+right: 5px;
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+    visibility: hidden;
+    display: inline;
+    background-color: white;
+    color: gray;
+    text-align: left;
+    padding-left: 5px;
+	padding-right: 5px;
+	border: 2px solid gray;
+	border-radius: 6px;
+ 
+    /* Position the tooltip text - see examples below! */
+    position: fixed;
+	right: 5px;
+	top: 65px;
+    z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
