--- a/kokua-web/style.css
+++ b/kokua-web/style.css
@@ -1,16 +1,16 @@
 body {color:white; font-family: 'Arvo';, sans-serif;
   background-image: /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffff7a+0,4fe2c0+50,53cbed+89 */
 background: rgb(255,255,122); /* Old browsers */
-background: -moz-linear-gradient(left,  rgba(255,255,122,1) 0%, rgba(79,226,192,1) 50%, rgba(83,203,237,1) 89%); /* FF3.6-15 */
-background: -webkit-linear-gradient(left,  rgba(255,255,122,1) 0%,rgba(79,226,192,1) 50%,rgba(83,203,237,1) 89%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to right,  rgba(255,255,122,1) 0%,rgba(79,226,192,1) 50%,rgba(83,203,237,1) 89%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+background: -moz-linear-gradient(right,  rgba(255,255,122,1) 0%, rgba(79,226,192,1) 50%, rgba(83,203,237,1) 89%); /* FF3.6-15 */
+background: -webkit-linear-gradient(right,  rgba(255,255,122,1) 0%,rgba(79,226,192,1) 50%,rgba(83,203,237,1) 89%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to left,  rgba(255,255,122,1) 0%,rgba(79,226,192,1) 50%,rgba(83,203,237,1) 89%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff7a', endColorstr='#53cbed',GradientType=1 ); /* IE6-9 */
  )
 }
 h6 {color:white; text-align: center; font-size: 40px; font-family:'Arvo';}
 .menu {
 	overflow-x:hidden;
-	position: relative;
+	position:relative;
 	left:0;
 }
 
@@ -83,7 +83,6 @@ h6 {color:white; text-align: center; font-size: 40px; font-family:'Arvo';}
 
 
 
-
 /* List on menu */
 
 
@@ -95,7 +94,7 @@ ul{
 	text-decoration:none;
 
 }
-
+b {text-align: right;}
 a{
 	text-decoration:none;
 	color: black;
@@ -104,98 +103,35 @@ a{
 }
 
 
-p{
+p{font-size: 25px;
 	text-align: center;
-	font-family: 'Avro';
+	font-family: 'Arvo';
 	color: white;
-	font-size: 18px;
 	
 }
-body {font-size:15px;
+body {font-size:20px;
+font-family: 'Arvo';
+color: white;
+}
+
+h3 {font-size:25px;
 font-family: 'Arvo';}
-
-h6 {font-size:30px;
-font-family: 'Arvo';}
-
-
+h2{font-size:40px;}
+h4 {font-size:30px;}
+h5{font-size:60px;}
+head {font-family:'Arvo';}
+div {font-family:'Arvo';
+font-size:20;}
 .button {
-    position: relative;
-	background-color: white;
-    border: 2px solid gray;
-    color: gray;
-    padding: 8px 10px;
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-	font-family: 'Arvo';
-    font-size: 12px;
+    font-size: 16px;
     margin: 4px 2px;
-	-webkit-transition-duration: 0.4s;
-    transition-duration: 0.3s;
     cursor: pointer;
 }
-.button:hover {
-    background-color:white;
-    color: #53cbed;
-	border: 2px solid #53cbed;
 
-}
-.button:hover {
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-}
-
-<<<<<<< HEAD
-li a {
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
-}
-
-li a.active {
-    background-color: #35B0E0;
-    color: white;
-}
-
-li a:hover:not(.active) {
-    background-color: white;
-    color: #35B0E0;
-}
-
-
-<.tooltipicon{
-position: fixed;
-top: 5px;
-right: 5px;
-}
-
-/* Tooltip container */
-.tooltip {
-position: fixed;
-top: 5px;
-right: 5px;
-}
-
-/* Tooltip text */
-.tooltip .tooltiptext {
-    visibility: hidden;
-    display: inline;
-    background-color: white;
-    color: gray;
-    text-align: left;
-    padding-left: 5px;
-	padding-right: 5px;
-	border: 2px solid gray;
-	border-radius: 6px;
- 
-    /* Position the tooltip text - see examples below! */
-    position: fixed;
-	right: 5px;
-	top: 65px;
-    z-index: 1;
-}
-
-/* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
-    visibility: visible;
-}
